logs/CxxWrap_0.6.log
>>> 'Pkg.add("CxxWrap")' log
INFO: Cloning cache of CxxWrap from https://github.com/JuliaInterop/CxxWrap.jl.git
INFO: Installing BinDeps v0.4.7
INFO: Installing CxxWrap v0.3.0
INFO: Installing SHA v0.3.2
INFO: Installing URIParser v0.1.8
INFO: Building CxxWrap
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/CxxWrap/deps/builds/cxx_wrap
INFO: Changing Directory to /home/vagrant/.julia/v0.6/CxxWrap/deps/builds/cxx_wrap
In file included from /home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/functions.cpp:1:0:
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/functions.hpp: In member function ‘jl_value_t* cxx_wrap::JuliaFunction::operator()(ArgumentsT&& ...) const’:
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/functions.hpp:91:53: error: there are no arguments to ‘jl_show’ that depend on a template parameter, so a declaration of ‘jl_show’ must be available [-fpermissive]
     jl_show(jl_stderr_obj(), jl_exception_occurred());
                                                     ^
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/functions.hpp:91:53: note: (if you use ‘-fpermissive’, G++ will accept your code, but allowing the use of an undeclared name is deprecated)
make[2]: *** [CMakeFiles/cxx_wrap.dir/functions.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/cxx_wrap.dir/all] Error 2
make: *** [all] Error 2
===============================[ ERROR: CxxWrap ]===============================

LoadError: failed process: Process(`cmake --build . --config Release --target install -- -j 4`, ProcessExited(2)) [2]
while loading /home/vagrant/.julia/v0.6/CxxWrap/deps/build.jl, in expression starting on line 180

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: CxxWrap had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.6
 - build the package(s) and all dependencies with `Pkg.build("CxxWrap")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date — you may not have the latest version of CxxWrap
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("CxxWrap")' log
Julia Version 0.6.0-pre.beta.230
Commit b9a541e (2017-04-21 02:02 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-116-generic #163-Ubuntu SMP Fri Mar 31 14:13:22 UTC 2017 x86_64 x86_64
Memory: 2.9392738342285156 GB (1383.26953125 MB free)
Uptime: 34564.0 sec
Load Avg:  1.07080078125  1.58837890625  1.732421875
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3499 MHz    2174824 s       4124 s     101745 s     696079 s         26 s
#2  3499 MHz     734227 s       3094 s      63778 s    2569672 s          0 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.6
2 required packages:
 - CxxWrap                       0.3.0
 - JSON                          0.9.0
4 additional packages:
 - BinDeps                       0.4.7
 - Compat                        0.24.0
 - SHA                           0.3.2
 - URIParser                     0.1.8
INFO: Testing CxxWrap
running test containers.jl...
ERROR: LoadError: /home/vagrant/.julia/v0.6/CxxWrap/deps/deps.jl not found, CxxWrap did not build properly
Stacktrace:
 [1] error(::String) at ./error.jl:21
 [2] include_from_node1(::String) at ./loading.jl:539
 [3] include(::String) at ./sysimg.jl:14
 [4] anonymous at ./<missing>:2
while loading /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl, in expression starting on line 24
ERROR: LoadError: LoadError: Failed to precompile CxxWrap to /home/vagrant/.julia/lib/v0.6/CxxWrap.ji.
Stacktrace:
 [1] compilecache(::String) at ./loading.jl:673
 [2] require(::Symbol) at ./loading.jl:460
 [3] include_from_node1(::String) at ./loading.jl:539
 [4] include(::String) at ./sysimg.jl:14
 [5] macro expansion at /home/vagrant/.julia/v0.6/CxxWrap/test/runtests.jl:14 [inlined]
 [6] anonymous at ./<missing>:?
 [7] include_from_node1(::String) at ./loading.jl:539
 [8] include(::String) at ./sysimg.jl:14
 [9] process_options(::Base.JLOptions) at ./client.jl:305
 [10] _start() at ./client.jl:371
while loading /home/vagrant/.julia/v0.6/CxxWrap/test/containers.jl, in expression starting on line 1
while loading /home/vagrant/.julia/v0.6/CxxWrap/test/runtests.jl, in expression starting on line 11
===============================[ ERROR: CxxWrap ]===============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.6/CxxWrap/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: CxxWrap had test errors

>>> End of log
